reduced slides to 5 slides and increas slide header fonts

--- a/Tailwind2/src/input.css
+++ b/Tailwind2/src/input.css
@@ -447,3 +447,10 @@ svg[data-active="true"] {
 .thisch {
   @apply w-[202px] h-[202px] relative -left-8;
 }
+
+.sli {
+  font-size: 24px;
+  line-height: 27.2px;
+  font-weight: 700;
+  font-family: Oswald, sans-serif;
+}
