--- a/Tailwind2/public/style.css
+++ b/Tailwind2/public/style.css
@@ -717,16 +717,16 @@ video {
   height: 3.5rem;
 }
 
-.h-3 {
-  height: 0.75rem;
-}
-
 .h-8 {
   height: 2rem;
 }
 
 .h-\[100px\] {
   height: 100px;
+}
+
+.h-\[10px\] {
+  height: 10px;
 }
 
 .h-\[1px\] {
@@ -781,10 +781,6 @@ video {
   width: 50%;
 }
 
-.w-3 {
-  width: 0.75rem;
-}
-
 .w-3\/4 {
   width: 75%;
 }
@@ -799,6 +795,10 @@ video {
 
 .w-80 {
   width: 20rem;
+}
+
+.w-\[10px\] {
+  width: 10px;
 }
 
 .w-\[176px\] {
@@ -970,24 +970,9 @@ video {
   background-color: rgb(24 28 35 / var(--tw-bg-opacity));
 }
 
-.bg-blue-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 64 175 / var(--tw-bg-opacity));
-}
-
 .bg-gray-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
-}
-
-.bg-gray-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}
-
-.bg-gray-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
 .bg-header {
@@ -998,11 +983,6 @@ video {
 .bg-headerBtnText {
   --tw-bg-opacity: 1;
   background-color: rgb(205 162 116 / var(--tw-bg-opacity));
-}
-
-.bg-red-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(153 27 27 / var(--tw-bg-opacity));
 }
 
 .bg-slate-500 {
@@ -1034,8 +1014,20 @@ video {
   background-image: url('./images/logo-imgg.jpg');
 }
 
+.bg-\[url\(\'\.\/images\/saloon\.jpg\'\)\] {
+  background-image: url('./images/saloon.jpg');
+}
+
+.bg-\[url\(\'\.\/images\/spa\.jpg\'\)\] {
+  background-image: url('./images/spa.jpg');
+}
+
 .bg-\[url\(\'\.\/images\/swimming-pool\.jpg\'\)\] {
   background-image: url('./images/swimming-pool.jpg');
+}
+
+.bg-\[url\(\'\.\/images\/tennis-court\.jpg\'\)\] {
+  background-image: url('./images/tennis-court.jpg');
 }
 
 .bg-cover {
@@ -1138,11 +1130,6 @@ video {
   padding-bottom: 1rem;
 }
 
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
 .py-\[20px\] {
   padding-top: 20px;
   padding-bottom: 20px;
@@ -1171,6 +1158,10 @@ video {
   padding-bottom: 0.25rem;
 }
 
+.pb-14 {
+  padding-bottom: 3.5rem;
+}
+
 .pb-5 {
   padding-bottom: 1.25rem;
 }
@@ -1187,12 +1178,20 @@ video {
   padding-right: 0px;
 }
 
+.pt-0 {
+  padding-top: 0px;
+}
+
 .pt-2 {
   padding-top: 0.5rem;
 }
 
 .pt-5 {
   padding-top: 1.25rem;
+}
+
+.pt-8 {
+  padding-top: 2rem;
 }
 
 .pt-\[70px\] {
@@ -1871,6 +1870,13 @@ svg[data-active="true"] {
   left: -2rem;
   height: 202px;
   width: 202px;
+}
+
+.sli {
+  font-size: 24px;
+  line-height: 27.2px;
+  font-weight: 700;
+  font-family: Oswald, sans-serif;
 }
 
 .hover\:bg-transxl:hover {
