--- a/Tailwind2/public/style.css
+++ b/Tailwind2/public/style.css
@@ -861,6 +861,10 @@ video {
   cursor: pointer;
 }
 
+.resize {
+  resize: both;
+}
+
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -895,6 +899,10 @@ video {
 
 .justify-around {
   justify-content: space-around;
+}
+
+.gap-0 {
+  gap: 0px;
 }
 
 .gap-1 {
@@ -1048,6 +1056,11 @@ video {
 
 .p-5 {
   padding: 1.25rem;
+}
+
+.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 .px-10 {
@@ -1293,10 +1306,6 @@ video {
 
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.ease-out {
-  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 
 body {
@@ -1840,36 +1849,83 @@ svg[data-active="true"] {
 }
 
 .slide {
-  width: 50%;
+  width: 100%;
   flex-shrink: 0;
+  overflow: hidden;
   padding-top: 1rem;
   padding-bottom: 1rem;
-  padding-left: 1.75rem;
-  padding-right: 0.75rem;
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+@media (min-width: 768px) {
+  .slide {
+    width: 50%;
+    padding-left: 1.75rem;
+    padding-right: 0.75rem;
+  }
 }
 
 .things {
   min-height: 210px;
+  width: 100%;
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
+@media (min-width: 768px) {
+  .things {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
 }
 
 .this {
   display: flex;
-  height: 202px;
-  width: 303px;
+  height: 200px;
+  width: 100%;
   flex-direction: column;
   align-items: flex-start;
   gap: 1.75rem;
 }
 
+@media (min-width: 768px) {
+  .this {
+    height: 202px;
+    width: 303px;
+  }
+}
+
+.tripleH {
+  flex-direction: column;
+  gap: 2.5rem;
+  padding: 0.75rem;
+}
+
+@media (min-width: 768px) {
+  .tripleH {
+    flex-direction: row;
+    gap: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+}
+
 .thisch {
   position: relative;
-  left: -2rem;
-  height: 202px;
-  width: 202px;
+  left: auto;
+  height: 300px;
+  width: 100%;
+}
+
+@media (min-width: 768px) {
+  .thisch {
+    left: -2rem;
+    height: 202px;
+    width: 202px;
+  }
 }
 
 .sli {
@@ -1938,6 +1994,10 @@ svg[data-active="true"] {
     gap: 0px;
   }
 
+  .md\:gap-2 {
+    gap: 0.5rem;
+  }
+
   .md\:gap-5 {
     gap: 1.25rem;
   }
@@ -1949,6 +2009,16 @@ svg[data-active="true"] {
   .md\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
+  }
+
+  .md\:px-10 {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+
+  .md\:px-5 {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
   }
 
   .md\:py-5 {
