--- a/Tailwind2/src/input.css
+++ b/Tailwind2/src/input.css
@@ -305,7 +305,7 @@ svg[data-active="true"] {
 .eko {
   position: absolute;
   font-size: 24px;
-   font-family: Oswald, sans-serif;
+  font-family: Oswald, sans-serif;
   font-weight: 500;
   transition: top 0.6s ease-in-out; /* Smooth transition for top property */
   line-height: 26.4px;
@@ -332,8 +332,6 @@ svg[data-active="true"] {
   line-height: 24px;
   font-weight: 400;
 }
-
-
 
 .horizon {
   @apply mt-2;
@@ -516,3 +514,16 @@ svg[data-active="true"] {
   font-weight: 700;
   line-height: 26.4px;
 }
+
+.slideA {
+  @apply w-[25%] h-[200.3px] shrink-0;
+}
+
+
+
+.slideB {
+  @apply w-full h-full flex justify-center items-center text-white text-2xl bg-transs hover:bg-Gallery transition ease-in-out duration-700;
+}
+
+
+
