--- a/Tailwind2/public/style.css
+++ b/Tailwind2/public/style.css
@@ -624,10 +624,6 @@ video {
   left: 0px;
 }
 
-.left-4 {
-  left: 1rem;
-}
-
 .left-\[204px\] {
   left: 204px;
 }
@@ -650,6 +646,10 @@ video {
 
 .left-\[56px\] {
   left: 56px;
+}
+
+.right-0 {
+  right: 0px;
 }
 
 .right-28 {
@@ -676,8 +676,8 @@ video {
   top: 1rem;
 }
 
-.top-\[89\%\] {
-  top: 89%;
+.top-\[88\%\] {
+  top: 88%;
 }
 
 .z-0 {
@@ -773,8 +773,8 @@ video {
   height: 2px;
 }
 
-.h-\[431px\] {
-  height: 431px;
+.h-\[455px\] {
+  height: 455px;
 }
 
 .h-\[45px\] {
@@ -881,12 +881,12 @@ video {
   width: 40%;
 }
 
-.w-\[50px\] {
-  width: 50px;
+.w-\[50\%\] {
+  width: 50%;
 }
 
-.w-\[54\%\] {
-  width: 54%;
+.w-\[50px\] {
+  width: 50px;
 }
 
 .w-\[56\%\] {
@@ -1002,6 +1002,10 @@ video {
   gap: 2rem;
 }
 
+.gap-\[12px\] {
+  gap: 12px;
+}
+
 .gap-\[17\.69px\] {
   gap: 17.69px;
 }
@@ -1055,6 +1059,11 @@ video {
 .bg-bla {
   --tw-bg-opacity: 1;
   background-color: rgb(153 153 153 / var(--tw-bg-opacity));
+}
+
+.bg-blue-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
 }
 
 .bg-gray-300 {
@@ -1261,6 +1270,11 @@ video {
   padding-right: 2.25rem;
 }
 
+.px-\[1rem\] {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .py-0 {
   padding-top: 0px;
   padding-bottom: 0px;
@@ -1405,6 +1419,10 @@ video {
   font-size: 32px;
 }
 
+.text-\[50px\] {
+  font-size: 50px;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1481,6 +1499,10 @@ video {
 
 .duration-700 {
   transition-duration: 700ms;
+}
+
+.duration-\[\.9s\] {
+  transition-duration: .9s;
 }
 
 .ease-in-out {
@@ -2208,9 +2230,15 @@ svg[data-active="true"] {
 }
 
 .slideA {
-  height: 200.3px;
-  width: 25%;
+  height: 138px;
+  width: 24.5%;
   flex-shrink: 0;
+}
+
+@media (min-width: 768px) {
+  .slideA {
+    height: 200px;
+  }
 }
 
 .slideB {
@@ -2241,8 +2269,10 @@ svg[data-active="true"] {
 }
 
 .nexttt {
+  position: relative;
+  right: 0px;
   cursor: pointer;
-  border-radius: 0.125rem;
+  border-radius: 0.375rem;
   background-color: rgba(214,214,214,0.6);
   padding: 5px;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
@@ -2254,6 +2284,76 @@ svg[data-active="true"] {
 
 .nexttt:hover {
   background-color: rgba(214,214,214,1);
+}
+
+@media (min-width: 768px) {
+  .nexttt {
+    left: 0.75rem;
+  }
+}
+
+.dotB {
+  position: relative;
+  right: 0px;
+  height: 10px;
+  width: 10px;
+  border-radius: 9999px;
+}
+
+@media (min-width: 768px) {
+  .dotB {
+    left: 0.75rem;
+  }
+}
+
+.arrowss {
+  z-index: 10;
+  cursor: pointer;
+  font-size: 30px;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.arrowss .point {
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
+}
+
+.arrowss:hover .point {
+  opacity: 1;
+  visibility: visible;
+}
+
+@media (max-width: 1000px) {
+  .slideA {
+    width: 32.6%;
+    height: 200px;
+  }
+
+  .slider {
+    /* background-color: yellow; */
+    gap: 9px;
+  }
+
+  .oyao {
+    padding: 0 0.5rem;
+  }
+
+  /* .banner8{
+    background-color: aqua;
+  } */
+}
+
+@media (max-width: 599.9px) {
+  .slideA {
+    width: 100%;
+  }
+}
+
+.extra{
+  background-size: cover;
+  background-position: center;
 }
 
 .hover\:bg-transxl:hover {
@@ -2278,6 +2378,10 @@ svg[data-active="true"] {
 @media (min-width: 768px) {
   .md\:relative {
     position: relative;
+  }
+
+  .md\:left-3 {
+    left: 0.75rem;
   }
 
   .md\:top-0 {
@@ -2332,12 +2436,12 @@ svg[data-active="true"] {
     gap: 0.5rem;
   }
 
-  .md\:gap-3 {
-    gap: 0.75rem;
-  }
-
   .md\:gap-5 {
     gap: 1.25rem;
+  }
+
+  .md\:gap-\[13px\] {
+    gap: 13px;
   }
 
   .md\:p-\[50px\] {
@@ -2362,6 +2466,11 @@ svg[data-active="true"] {
   .md\:px-5 {
     padding-left: 1.25rem;
     padding-right: 1.25rem;
+  }
+
+  .md\:px-\[1rem\] {
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
   .md\:py-0 {
